<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/settings_min_news_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_news_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_country_default"
        android:inputType="text"
        android:key="@string/settings_country_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_country_label" />

</PreferenceScreen>