<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/four"
        android:gravity="center"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="2"
        android:textStyle="bold"
        android:text="@string/list_title_place_holder"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/list_txt_contriputer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight"
        android:layout_marginRight="@dimen/eight"
        android:maxLines="1"
        android:minLines="1"
        android:textStyle="bold"
        android:ellipsize="end"
        android:text="@string/list_contriputer_place_holder"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/list_item_root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/four">

        <TextView
            android:id="@+id/list_txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/four"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/list_date_place_holder"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/list_txt_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/four"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/list_type_place_holder"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>